--- a/Junior/Fall2024/AnalysisI/lecture3.tex
+++ b/Junior/Fall2024/AnalysisI/lecture3.tex
@@ -277,7 +277,7 @@ Consider the rectangular box $I_n$:
 \end{theorem}
 
 \begin{theorem}
-$E \supseteq \R^n$ is compact $\iff E$ is closed and bounded.
+$E \subseteq \R^n$ is compact $\iff E$ is closed and bounded.
 \begin{proof}
    $\rightarrow$: Since $E$ is compact  $\to$  $E$ is closed and bounded by prop 1 and 2. \\
 
