--- a/Junior/Fall2024/ProbI/hw/hw6_ans.tex
+++ b/Junior/Fall2024/ProbI/hw/hw6_ans.tex
@@ -52,18 +52,11 @@
    \begin{align*}
      E[Y_3] &= \sum_{k=1}^{3} k \cdot P[Y_3 = k] \\
             &= \sum_{k=1}^{3} k (\sum_{i=1}^{3} P[Y_0=i] \cdot P[Y_3=k\mid Y_0 = i])\\
-            &= \sum_{k=1}^{3} k \left( P^{3} \cdot v_0 \right)_{k}  \\
-            &=  \sum_{k=1}^{3} k  \begin{pmatrix}
-0.3495 \\
-0.4027 \\
-0.3264
-\end{pmatrix}_{k} \\
-            &=  \begin{pmatrix} 1 \\ 2 \\ 3 \end{pmatrix}^{T} \cdot \begin{pmatrix}
-0.3495 \\
-0.4027 \\
-0.3264
-\end{pmatrix} \\
-                                      &= 2.1341 
+            &= \sum_{k=1}^{3} k \left(v_0 \cdot P^{3})_{k}  \\
+            &=  \sum_{k=1}^{3} k \begin{pmatrix} 0.46525 & 0.32405 & 0.21065 \end{pmatrix}_{k}\\
+            &=  \begin{pmatrix} 1 \\ 2 \\ 3 \end{pmatrix} \cdot \begin{pmatrix}
+    0.46525 & 0.32405 & 0.21065 \end{pmatrix} \\
+                                      &= 1.7453
    .\end{align*}
   \end{proof}
   \item Suppose that P is transition matrix for some finite-state Markov chain. Suppose that there
